# SurvivalCraft

./: .gitignore  CMakeLists.txt
include/SurvivalCraft/: shader.hpp  texture.hpp
include/glad/: glad.h
resources/shaders/: fshader.glsl  vshader.glsl
src/: main.cpp  shader.cpp  texture.cpp
